fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,20 @@
 @import-normalize;
 
+::-webkit-scrollbar {
+  width: 18px;
+}
+
+::-webkit-scrollbar-track {
+  background: linear-gradient(90deg, rgba(215, 173, 244, 1) 0%, rgba(201, 219, 255, 1) 50%, rgba(242, 128, 220, 1) 100%);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(5, 5, 5, 0.2);
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +22,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: rgb(215, 173, 244);
   background: linear-gradient(90deg, rgba(215, 173, 244, 1) 0%, rgba(201, 219, 255, 1) 50%, rgba(242, 128, 220, 1) 100%);
   
 }
@@ -33,19 +47,4 @@ ol {
   margin: 0;
   padding: 0;
   list-style: none;
-}
-
-::-webkit-scrollbar {
-  width: 20px;
-}
-
-::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: var(--border-button-color);
-  border-radius: 20px;
-  border: 6px solid transparent;
-  background-clip: content-box;
 }
